--- a/calculator.html
+++ b/calculator.html
@@ -1,9 +1,15 @@
 <html>
-    <body>
-        <h1>CO2 Calculator</h1>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    
+    </head>
+
+    <body class="box">
+
+    <h1>CO2 Calculator</h1>
 
         <img alt="CO2 Ausstoß"
-        height="150px"
+        width="350px"
         src="CO2.jpg">
     </img>
     <br><br>
@@ -19,12 +25,12 @@
     <button>+</button>
 
     <ul>
+        <div class="box mg-large pd-large">45km with bus (3375g)</div>
         <li>45km with bus (3375g)</li>
         <li>12km with bus (900g)</li>
         <li>774km with train (21672g)</li>
     </ul>
     <b>total emission: 25999g</b>
-
 
     </body>
 </html>
