--- a/calculator.html
+++ b/calculator.html
@@ -1,18 +1,21 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
-    
     </head>
 
     <body class="box">
-
+<br>
     <h1>CO2 Calculator</h1>
 
+    <div class="flex">
         <img alt="CO2 Ausstoß"
-        width="350px"
+        width="380px"
         src="CO2.jpg">
+    </div>
     </img>
+
     <br><br>
+<text>
     <label for="km">km</label>
     <input type="text" id="km">
     <label for="vehicle"></label>
@@ -24,13 +27,16 @@
     </select>
     <button>+</button>
 
-    <ul>
-        <div class="box mg-large pd-large">45km with bus (3375g)</div>
-        <li>45km with bus (3375g)</li>
-        <li>12km with bus (900g)</li>
-        <li>774km with train (21672g)</li>
-    </ul>
-    <b>total emission: 25999g</b>
+    <br>
+    
+    <div class="box1 mg-small pd-large">45km with bus (3375g)</div>
+    <div class="box1 mg-small pd-large">12km with bus (900g)</div>
+    <div class="box1 mg-small pd-large">774km with train (21672g)</div>
+
+<b><div class="box2 mg-small pd-large">total emission: 25999g</div></b>
+
+
+</text>
 
     </body>
 </html>
